# 3821

./: .travis.yml  02-Rekomendatsii-po-ofrmleniyu-kvalifikatsionnyh-rabot-2016_isprav.doc  C++ шпаргалка.pptx  CMakeLists.txt  Coding_Guidelines.doc  README.md  git шпаргалка.txt  Второй семестр - лабораторные  Домашнее_задание.md  ЛР1 Алгебра полиномов.docx  ЛР2 Pascal--.docx  Первый семестр - Вторая лабораторная.md  Типичные ошибки  Требования на оценку 3 по МП1 (язык С).docx  Требования на оценку 3 по МП1 (язык С++).docx  Требования на оценку 3 по МП2 (АиСД).docx  Шаблон отчёта по Лабораторной работе.doc
Debug1/: arraytab.cpp  arraytab.h  datacom.h  ttable.h  vector.cpp
vector/: CMakeLists.txt  main.cpp
vectorlib/: CMakeLists.txt  MyVector.cpp  MyVector.h
workflows/: blank.yml
Задания за прошлый семестр/: Домашнее_задание.md  Первый семестр - Первая лабораторная.md  Прошлый год.md
